--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Dhruva Kalyani
-description: Physics | Astronomy | Research
+description: Astrophysics & Physics Student
 theme: jekyll-theme-cayman
