--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
+title: Dhruva Kalyani
 description: Astrophysics Undergraduate Student
 
