--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
----
-title: false
----
 
+title: Dhruva Kalyani
 description: Astrophysics Undergraduate Student
 
